  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/133 ; I was able
  to see that problem again after upgrading to the latest Thunderbird, but not
  even that should be solved.
* Add the pEp-engine-print-log script, useful to print database-destination logs
  in a compact textual format.  This simple bash script is useful for developers
  and possibly service people.

v3.2.1  2023-03-23
* DEPENDENCIES: require an official release of libpEpTransport.

v3.2.0  2023-03-23
* CI fixes, thanks to dvn:
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/pulls/147 .
* Update the API specification in api/ so that we can machine-generate more
  code.  Not finished yet, but this might help concurrent development such as
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/149 .
* Solve a benign but distracting intermittent test suite failure, that happens
  on the CI machine but not on positron's laptop.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/150 .

v3.2.0-RC27  2023-03-16
* Fix management database upgrading from versions older than 13; no API changes.
* Fix benign test suite failures: we are back to zero expected failures.

v3.2.0-RC26  2023-03-03
* Merge https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/139 from
  Dirk: build system updates, after I added a new compilation unit.

v3.2.0-RC25  2023-03-01
* Merge https://gitea.pep.foundation/pEp.foundation/pEpEngine/pulls/138 (build
  fixes for ios, thanks to Dirk).
* New environment variable PEP_LOG_ASYNC: when defined (to any value) make
  database-destination logging asynchronous, which is less reliable in case of
  crashes but faster by several orders of magnitide.
  New API function to control the same feature at configuration level, per
  session:
  DYNAMIC_API void config_enable_log_synchronous(PEP_SESSION session, bool enable);
* Fix API function get_crashdump_log: it is now back to work correctly if